fix: Prevent MainMenu from overflowing the grid in netbook screen-size

--- a/src/scss/MainMenu.scss
+++ b/src/scss/MainMenu.scss
@@ -216,7 +216,8 @@
 		right: 0;
 		left: cols_pct(3, 3);
 		height: $var--Layout__header-height;
-		margin: 0 prem(-20);
+		margin-right: between_Topmenu(-8, -20);
+		margin-left: between_Topmenu(-14, -20);
 		display: flex;
 		justify-content: flex-end;
 		align-items: center;
@@ -228,8 +229,8 @@
 	}
 
 	.MainMenu__item {
-		--MainMenu__item-padding: #{between_Topmenu(4, 10)};
 		margin: 0 between_Topmenu(4, 10);
+		--MainMenu__item-padding: #{between_Topmenu(4, 10)};
 	}
 	.MainMenu__item:not(.MainMenu__separator ~ *) {
 		--MainMenu__item-padding: #{prem(10)};
